welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  else if (speed >=81 && isBirthday=false){
                      ^caughtSpeeding:17: error: type mismatch;
 found   : Unit
 required: Int
  else if (speed >=86 && isBirthday==true){
       ^